RESOLVED FIXED158850
Kraken/stanford-crypto-pbkdf2.js sometimes crashes with an OSR assertion in FTL
https://bugs.webkit.org/show_bug.cgi?id=158850
Summary Kraken/stanford-crypto-pbkdf2.js sometimes crashes with an OSR assertion in FTL
Filip Pizlo
Reported 2016-06-16 14:58:35 PDT
Patch forthcoming.
Attachments
the patch (5.71 KB, patch)
2016-06-16 15:01 PDT, Filip Pizlo
keith_miller: review+
Filip Pizlo
Comment 1 2016-06-16 15:01:25 PDT
Created attachment 281477 [details] the patch
Keith Miller
Comment 2 2016-06-16 15:03:59 PDT
Comment on attachment 281477 [details] the patch r=me.
Filip Pizlo
Comment 3 2016-06-16 15:18:29 PDT
Note You need to log in before you can comment on or make changes to this bug.